--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,46 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./images/ukraine.png"
+    />
+    <title>Homework 11</title>
+
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <form class="search-form" id="search-form">
+      <input
+        class="input"
+        type="text"
+        name="searchQuery"
+        autocomplete="off"
+        placeholder="Search images..."
+      />
+      <button class="btn" type="submit">Search</button>
+    </form>
+
+    <div class="gallery"></div>
+
+    <!-- div для скрола -->
+    <!-- <div class="target-element"></div> -->
+
+    <!-- btn  -->
+    <button type="button" class="load-more is-hidden">Load more</button>
+
+    <script src="./js/index.js" type="module"></script>
+    <!-- <script src="./js/scroll.js" type="module"></script> -->
   </body>
 </html>
