--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,11 @@
 
     <!-- btn  -->
     <button type="button" class="load-more is-hidden">Load more</button>
-
+    <div>
+      <div class="wave"></div>
+      <div class="wave"></div>
+      <div class="wave"></div>
+    </div>
     <script src="./js/index.js" type="module"></script>
     <!-- <script src="./js/scroll.js" type="module"></script> -->
   </body>
