--- a/src/index.html
+++ b/src/index.html
@@ -35,16 +35,22 @@
     <div class="gallery"></div>
 
     <!-- div для скрола -->
-    <!-- <div class="target-element"></div> -->
+    <div class="target-element"></div>
 
-    <!-- btn  -->
-    <button type="button" class="load-more is-hidden">Load more</button>
+    <!-- спосіб з btn  -->
+    <!-- <button type="button" class="load-more is-hidden">Load more</button> -->
+
+    <!-- Бекграунд  -->
     <div>
       <div class="wave"></div>
       <div class="wave"></div>
       <div class="wave"></div>
     </div>
-    <script src="./js/index.js" type="module"></script>
-    <!-- <script src="./js/scroll.js" type="module"></script> -->
+
+    <!-- Скріпти -->
+    <!-- <script src="./js/index.js" type="module"></script> -->
+
+    <!--  Скріпт для скрола -->
+    <script src="./js/scroll.js" type="module"></script>
   </body>
 </html>
